[gd_scene load_steps=7 format=3 uid="uid://ci8vg0aqpbsvf"]

[ext_resource type="Script" path="res://nodes/staging_node.gd" id="1_p3fdh"]
[ext_resource type="PackedScene" uid="uid://c24o1xroe8oes" path="res://nodes/connector.tscn" id="2_ipa7r"]
[ext_resource type="Texture2D" uid="uid://c7nymhfcdr3hl" path="res://addons/sprite_painter/graphics/diags.png" id="3_ews06"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ac7gt"]
radius = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smi1j"]
bg_color = Color(0.22425, 0.161, 0.23, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yh5b8"]
bg_color = Color(0.3224, 0.496, 0.62, 1)

[node name="stagingNode" type="Node2D"]
script = ExtResource("1_p3fdh")

[node name="Connector" parent="." instance=ExtResource("2_ipa7r")]

[node name="CollisionShape2D" parent="Connector" index="0"]
shape = SubResource("CircleShape2D_ac7gt")

[node name="ColorRect" type="TextureRect" parent="."]
self_modulate = Color(0.6, 0.388235, 0.188235, 1)
offset_left = -12.0
offset_top = -14.0
offset_right = 12.0
offset_bottom = 11.0
texture = ExtResource("3_ews06")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.286
anchor_top = 0.533
anchor_right = 1.321
anchor_bottom = 1.1
offset_left = 0.00800037
offset_top = 1.01
offset_right = 0.0119972
offset_bottom = 1.0
theme_override_font_sizes/font_size = 12
theme_override_styles/background = SubResource("StyleBoxFlat_smi1j")
theme_override_styles/fill = SubResource("StyleBoxFlat_yh5b8")
value = 75.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Connector" to="." method="_on_connector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Connector"]
